<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="¡Registrate en Animalias!"
        android:id="@+id/textViewRegistro"></TextView>


    <TextView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:text="@string/mail"
    android:id="@+id/textViewMail"
        />

    <EditText
        android:id="@+id/mail"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:inputType="text" />

        <TextView
            android:id="@+id/textViewPassword"
            style="@style/TextViewRegitre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password" />
    <EditText
        android:id="@+id/contraseña"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:singleLine="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direccion"
        android:id="@+id/textDireccion"
        style="@style/TextViewRegitre"
        />
    <EditText
        android:id="@+id/direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:id="@+id/textViewNombre"
        style="@style/TextViewRegitre"
        />
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        style="@style/TitleMainActivity"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textAppearance="?android:attr/textAppearanceSmallInverse"
        android:singleLine="true"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefono"
        android:id="@+id/textViewCellPhone"
        style="@style/TextViewRegitre"
        />
    <com.santalu.maskedittext.MaskEditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_mask="+54 (###)### ## ##"
        android:inputType="phone"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mascota"
        android:id="@+id/texViewMascota"
        style="@style/TextViewRegitre"
        />

    <EditText
        android:id="@+id/mascota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alimento"
        android:id="@+id/texViewAlimento"
        style="@style/TextViewRegitre"
        />
    <EditText
        android:id="@+id/alimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dia"
        android:id="@+id/texViewDia"
        style="@style/TextViewRegitre"
        />
    <EditText
        android:id="@+id/dia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="141dp"
        android:hint="Login"
        android:onClick="loginUser" />
</LinearLayout>

